--- a/src/components/topbar/TopBar.css
+++ b/src/components/topbar/TopBar.css
@@ -31,8 +31,8 @@
   width: 15px;
   height: 15px;
   position: absolute;
-  top: 0px;
-  right: 10px;
+  top: -5px;
+  right: 0px;
   background-color: red;
   color: white;
   border-radius: 50%;
@@ -40,4 +40,11 @@
   align-items: center;
   justify-content: center;
   font-size: 10px;
+}
+
+.topAvatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
 }
